# Audio-Splitter-Stems-Harmonix

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DASHBOARD.md  DAW_WORKSPACE_SPEC.md  DEPLOYMENT.md  Dockerfile  Dockerfile.cpu  Dockerfile.railway  Dockerfile.runpod  Dockerfile.slim  Harmonix_Batch_Import.ipynb  LICENSE  PROJECT_SUMMARY.md  Procfile  README.md  cookies.txt  docker-compose.cpu.yml  docker-compose.slim.yml  docker-compose.yml  pyproject.toml  quickstart.sh  railway.json  render.yaml  requirements-lite.txt  requirements.txt  run_dashboard.py  runpod_handler.py  start.sh  start_dashboard.sh  verify_installation.py
.do/: app.yaml
.github/workflows/: deploy.yml
config/: config.yaml
data/: activities.json  users.json
docs/: API_REFERENCE.md  ARCHITECTURE.md  AUDIO_PROCESSING.md  CLI_GUIDE.md  CONFIGURATION.md  DASHBOARD.md  DASHBOARD_MODULES.md  DESIGN_SYSTEM.md  DEVELOPER_GUIDE.md  DOCKER.md  DOCUMENTATION.md  INSTALLATION.md  INSTRUMENT_DETECTION.md  LYRICS_EXTRACTION.md  MEDIA_REQUIREMENTS.md  MUSIC_ANALYSIS.md  QUALITY_MODES.md  QUICKSTART.md  README.md  SHARED_LIBRARY.md  STEM_SEPARATION.md  SUPPORTED_FORMATS.md  TROUBLESHOOTING.md  USER_MANAGEMENT.md  YOUTUBE_INTEGRATION.md
scripts/: migrate_to_library.py  start.sh  stop.sh
src/harmonix_splitter/: __init__.py  auth.py  cli.py  dashboard.py  library.py  popular_cache.py
src/harmonix_splitter/analysis/: __init__.py  detector.py  music_analyzer.py
src/harmonix_splitter/api/: __init__.py  main.py
tests/: __init__.py  conftest.py  test_api.py  test_separator.py
(+72 files in other folders)
