[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "harmonix-audio-splitter"
version = "1.0.0"
description = "High-fidelity AI-powered audio stem separation with instrument-level analysis"
authors = [
    {name = "Stephan El Khoury", email = "stephan@harmonix.dev"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["audio", "stems", "separation", "ai", "music", "demucs"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.scripts]
harmonix-split = "harmonix_splitter.cli:main"

[tool.setuptools]
packages = ["harmonix_splitter"]
package-dir = {"" = "src"}

[tool.black]
line-length = 100
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=src/harmonix_splitter --cov-report=html --cov-report=term"
